--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,6 @@ stages:
     jobs:
     - job: Job 1
       steps
-      - bash: |
-        echo hello world
+      - script: |
+          echo hello world
         displayName: A bash script
