--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,9 +4,11 @@ pool:
   vmImage: ubuntu-latest
 
 stages:
-  - stage: Stage 1
+  - stage: Stage1
+    displayName: Stage 1
     jobs:
-    - job: Job 1
+    - job: Job1
+      displayName: Job 1
       steps:
       - script: |
           echo hello world
