--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,6 @@ stages:
       displayName: Job 1
       steps:
       - script: |
-          testValue=$(Pipeline.Parameters.initialValue)
+          testValue="$(Pipeline.Parameters.initialValue)"
           echo hello world $(testValue)
         displayName: A bash script
