--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,8 @@ stages:
       displayName: Job 1
       steps:
       - task: Bash@3
-        script: |
-          testValue=$(Pipeline.Parameters.initialValue)
-          echo hello world $(testValue)
+        inputs:
+          script: |
+            testValue=$(Pipeline.Parameters.initialValue)
+            echo hello world $(testValue)
         displayName: A bash script
