--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,5 +19,6 @@ stages:
       - task: Bash@3
         inputs:
           targetType: "inline"
-          script: env
+          script: |
+            env
         displayName: A bash script
