--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ stages:
     displayName: Stage 1
     jobs:
     - job: Job1
-      displayName: Job 1
+      displayName: Job 1.1
       steps:
       - task: Bash@3
         inputs:
@@ -23,4 +23,17 @@ stages:
             myValue=`echo ${{ parameters.initialValue }}`
             echo "my value is $myValue"
             echo "##vso[task.setvariable variable=anotherValue;isoutput=true]$myValue"
-        displayName: A bash script
+        displayName: Bash script 1
+        name: Script1
+  - stage: Stage2
+    displayName: Stage 2
+    jobs:
+    - job: Job2
+      displayName: Job 2.2
+      steps:
+      - task: Bash@3
+        inputs:
+          targetType: "inline"
+          script: |
+            echo "my value is $[ stageDependencies.Stage1.Job1.outputs['Script1.anotherValue'] ]"
+          displayName: Bash script 2
