--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,11 +29,13 @@ stages:
     displayName: Stage 2
     jobs:
     - job: Job2
+      variables:
+        myStageAVar: $[ stageDependencies.Stage1.Job1.outputs['Script1.anotherValue'] ]
       displayName: Job 2.2
       steps:
       - task: Bash@3
         inputs:
           targetType: "inline"
           script: |
-            echo "my value is $[ stageDependencies.Stage1.Job1.outputs['Script1.anotherValue'] ]"
+            echo "my value is $(myStageVar)"
           displayName: Bash script 2
