--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,18 @@ stages:
             echo "my value is $myValue"
             echo "##vso[task.setvariable variable=anotherValue;isoutput=true]$myValue"
         displayName: Bash script 1
-        name: Script1
+        name: Script11
+    - job: Job12
+      displayName: Job 1.2
+      variables:
+        myJobVar: $[ dependencies.Job1.outputs['Script1.anotherValue'] ]
+      steps:
+      - task: Bash@3
+        inputs:
+          targetType: "inline"
+          script: |
+            echo "my value is $(myJobVar)"
+          displayName: Bash script 12    
   - stage: Stage2
     displayName: Stage 2
     jobs:
