--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,19 @@ parameters:
     displayName: initial vlaue
 
 stages:
+  - stage: Stage0
+    displayName: Stage 0
+    jobs:
+    - job: Job0
+      displayName: Job 0.1
+      steps:
+      - task: Bash@3
+        inputs:
+          targetType: "inline"
+          script: |
+            echo "hello world"
+        displayName: Bash script 1
+        name: Script11
   - template: atemplate.yml
   - stage: Stage1
     displayName: Stage 1
