--- a/atemplate.yml
+++ b/atemplate.yml
@@ -22,8 +22,8 @@ stages:
               targetType: "inline"
               script: |
                 myValue=`echo ${{ parameters.templateParam }}`
-                echo "my value 1(set from stage dependencies) is $myValue"
+                echo "my value 1(set from stage dependencies) does not appear because templates are expanded first before stages are run $myValue"
                 myValue=`echo ${{ parameters.templateParam2 }}`
-                echo "my value 2 is $myValue"
+                echo "my value 2(is a parameter that is hard coded) is $myValue"
             displayName: Template Bash script 1
             name: TemplateScript11
