--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ stages:
             name: Script11
   - template: atemplate.yml
     parameters:
+#     this wont work because the template is expanded before the stages are run
       templateParam: $[ dependencies.Stage0.Job0.outputs['Script11.parameterValue'] ]
       templateParam2: just a test value
   - stage: Stage1
@@ -40,7 +41,7 @@ stages:
               targetType: "inline"
               script: |
                 myValue=`echo ${{ parameters.initialValue }}`
-                echo "my value is $myValue"
+                echo "parameter value that is passed in $myValue"
                 echo "##vso[task.setvariable variable=anotherValue;isoutput=true]$myValue"
             displayName: Bash script 1
             name: Script11
@@ -54,7 +55,7 @@ stages:
             inputs:
               targetType: "inline"
               script: |
-                echo "my value is $(myJobVar)"
+                echo "This is a value that comes from a previous job $(myJobVar)"
               displayName: Bash script 12
   - stage: Stage2
     displayName: Stage 2
@@ -68,6 +69,6 @@ stages:
             inputs:
               targetType: "inline"
               script: |
-                echo "my value is $(myStageVar)"
+                echo "this is a value that comes from a previous stage $(myStageVar)"
               displayName: Bash script 2
 
