--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,12 +23,12 @@ stages:
                 echo "hello world"
                 myValue="the fox is over there"
                 echo "##vso[task.setvariable variable=parameterValue;isoutput=true]$myValue"
-            displayName: Bash script 1
-            name: Script11
+            displayName: Bash script that echos a variable and outputs a variable
+            name: Script00
   - template: atemplate.yml
     parameters:
 #     this wont work because the template is expanded before the stages are run
-      templateParam: $[ dependencies.Stage0.Job0.outputs['Script11.parameterValue'] ]
+      templateParam: $[ dependencies.Stage0.Job0.outputs['Script00.parameterValue'] ]
       templateParam2: just a test value
   - stage: Stage1
     displayName: Stage 1
@@ -43,20 +43,22 @@ stages:
                 myValue=`echo ${{ parameters.initialValue }}`
                 echo "parameter value that is passed in $myValue"
                 echo "##vso[task.setvariable variable=anotherValue;isoutput=true]$myValue"
-            displayName: Bash script 1
+            displayName: Bash script to set a variable and output it
             name: Script11
       - job: Job12
         dependsOn: Job1
         displayName: Job 1.2
         variables:
-          myJobVar: $[ dependencies.Job1.outputs['Script11.anotherValue'] ]
+          myJobVar1: $[ dependencies.Job1.outputs['Script11.anotherValue'] ]
+          myJobVar2: $[ stageDependencies.Stage0.Job0.outputs['Script00.anotherValue'] ]
         steps:
           - task: Bash@3
             inputs:
               targetType: "inline"
               script: |
-                echo "This is a value that comes from a previous job $(myJobVar)"
-              displayName: Bash script 12
+                echo "This is a value that comes from a previous job $(myJobVar1)"
+                echo "This is a value that comes from a previous stage $(myJobVar1)"
+              displayName: Bash script to retrieve a previous stage and jobs output
   - stage: Stage2
     displayName: Stage 2
     jobs:
@@ -70,5 +72,5 @@ stages:
               targetType: "inline"
               script: |
                 echo "this is a value that comes from a previous stage $(myStageVar)"
-              displayName: Bash script 2
+              displayName: Bash script to output a previous stage variable
 
