--- a/asuperTemplate.yml
+++ b/asuperTemplate.yml
@@ -4,7 +4,6 @@ parameters:
     type: string
 stages:
   - stage: SuperTemplateStage1
-    dependsOn: Stage1
     displayName: SuperTemplateStage 1
     jobs:
       - job: SuperTemplateJob1
@@ -24,6 +23,6 @@ stages:
             inputs:
               targetType: "inline"
               script: |
-                echo "this is a value that comes from a previous stage $(myStageVar)"
+                echo "this is a value that comes from a previous stage but is empty because stage dependency is not declared $(myStageVar)"
             displayName: Super Template Bash script to output stage variables of a calling template
             name: SuperTemplateScript12
