--- a/atemplate.yml
+++ b/atemplate.yml
@@ -17,6 +17,7 @@ stages:
       - job: TemplateJob1
         displayName: Template Job 1
         steps:
+          - checkout: none
           - task: Bash@3
             inputs:
               targetType: "inline"
